--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
         <link rel="stylesheet" href="/stylesheets/style.css" type="text/css"> 
         <link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon" /> 
-        <!--<link rel="alternate" href="/atom.xml" title="" type="application/atom+xml"> -->
+        <link rel="alternate" href="/feed" title="" type="application/rss+xml"> 
     </head> 
 
     <body> 
